--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx node server/index.js",
     "react-dev": "webpack --mode development --watch",
     "server-dev": "npx nodemon server/index.js"
   },
@@ -20,6 +21,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^16.0.3",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^5.10.15",
