--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "mongoose": "^5.10.15",
     "react": "^16.4",
     "react-dom": "^16.4"
+  },
+  "engines": {
+    "node": "16.17.0"
   }
+
 }
