--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=1128
 MONGODB_URI='mongodb+srv://fetcher-app:Y9nVibkzWOS0zfkx@fetcher.p0dmhjf.mongodb.net/?retryWrites=true&w=majority'
+TOKEN='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'
