--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
+    "build": "webpack --mode=production",
     "react-dev": "webpack --mode development --watch",
     "server-dev": "npx nodemon server/index.js"
   },
